--- a/Flag/src/main/res/drawable/rect.xml
+++ b/Flag/src/main/res/drawable/rect.xml
@@ -6,8 +6,7 @@
         </shape>
     </item>
 
-    <item
-        android:bottom="2px">
+    <item android:bottom="2px">
         <shape android:shape="rectangle">
             <solid android:color="#fff" />
         </shape>
