--- a/Flag/src/main/res/layout/ac_main.xml
+++ b/Flag/src/main/res/layout/ac_main.xml
@@ -1,5 +1,4 @@
-<android.support.v4.widget.DrawerLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context=".MainActivity"
     tools:ignore="MergeRootFrame"
@@ -11,7 +10,7 @@
         android:id="@+id/container"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/activity_background"/>
+        android:background="@color/activity_background" />
 
     <LinearLayout
         android:id="@+id/drawer"
@@ -21,7 +20,7 @@
         android:layout_gravity="start"
         android:visibility="gone"
         android:padding="8dp"
-        android:background="#fff" >
+        android:background="#fff">
 
         <!--
         <TextView
