--- a/Flag/src/main/res/layout/fr_main.xml
+++ b/Flag/src/main/res/layout/fr_main.xml
@@ -1,5 +1,4 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:ads="http://schemas.android.com/apk/res-auto"
     xmlns:mobilead="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
@@ -8,8 +7,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    android:orientation="vertical"
-    tools:context=".PlaceholderFragment">
+    android:orientation="vertical" >
 
     <com.tonicartos.widget.stickygridheaders.StickyGridHeadersGridView
         android:id="@+id/gv_flags"
@@ -23,7 +21,7 @@
         android:layout_marginRight="6dp"
         android:drawSelectorOnTop="true"
         android:fastScrollEnabled="false"
-        tools:context=".PlaceholderFragment" />
+        android:listSelector="@drawable/gv_selector"/>
 
     <FrameLayout
         android:layout_width="match_parent"
