--- a/Flag/src/main/res/layout/ac_splash.xml
+++ b/Flag/src/main/res/layout/ac_splash.xml
@@ -4,8 +4,9 @@
     xmlns:r="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingLeft="@dimen/activity_splash_padding"
-    android:paddingRight="@dimen/activity_splash_padding"
+    android:paddingTop="@dimen/activity_splash_padding_top"
+    android:paddingLeft="@dimen/activity_splash_padding_horizontal"
+    android:paddingRight="@dimen/activity_splash_padding_horizontal"
     android:orientation="vertical"
     android:background="@color/accent1">
 
