--- a/Flag/src/main/res/values-hdpi/dimens.xml
+++ b/Flag/src/main/res/values-hdpi/dimens.xml
@@ -1,4 +1,5 @@
 <resources>
     <dimen name="thumbnail_height">110dp</dimen>
+    <dimen name="activity_splash_padding_top">0dp</dimen>
     <integer name="numColumns">2</integer>
 </resources>
