--- a/Flag/src/main/res/values/dimens.xml
+++ b/Flag/src/main/res/values/dimens.xml
@@ -2,7 +2,8 @@
     <!-- Default screen margins, per the Android Design guidelines. -->
     <dimen name="activity_horizontal_margin">0dp</dimen>
     <dimen name="activity_vertical_margin">0dp</dimen>
-    <dimen name="activity_splash_padding">32dp</dimen>
+    <dimen name="activity_splash_padding_top">0dp</dimen>
+    <dimen name="activity_splash_padding_horizontal">32dp</dimen>
     <dimen name="thumbnail_round">4dp</dimen>
 
     <dimen name="h1">22sp</dimen> <!-- TextAppearance.Large -->
